WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
288395
REGRESSION(
290260@main
): [Win] WebInspector never starts as attached and can't be attached
https://bugs.webkit.org/show_bug.cgi?id=288395
Summary
REGRESSION(290260@main): [Win] WebInspector never starts as attached and can'...
Fujii Hironori
Reported
2025-02-24 12:46:24 PST
After
290260@main
, opening WebInspector always opens a new inspector window. Never starts as attached to the window. See also:
Bug 288189
– REGRESSION(
290260@main
) [GTK] inspector never starts attached and can't be attached
Attachments
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2025-02-24 12:50:55 PST
Pull request:
https://github.com/WebKit/WebKit/pull/41221
EWS
Comment 2
2025-02-26 22:00:50 PST
Committed
291202@main
(0557803fbb59): <
https://commits.webkit.org/291202@main
> Reviewed commits have been landed. Closing PR #41221 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-02-26 22:01:22 PST
<
rdar://problem/145718697
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug