REGRESSION(290260@main): [Win] WebInspector can't be attached to the inspected window https://bugs.webkit.org/show_bug.cgi?id=288395

Unreviewed fix.

After <https://commits.webkit.org/290260@main>, WebInspector never
started as attached to the window. It always opened a new inspector
window.

<https://commits.webkit.org/290937@main> fixed the problem for GTK
port. WebInspectorUIProxy::platformCanAttach has to be implemented for
Windows port too.

* Source/WebKit/UIProcess/Inspector/WebInspectorUIProxy.h:
* Source/WebKit/UIProcess/Inspector/win/WebInspectorUIProxyWin.cpp:
(WebKit::WebInspectorUIProxy::platformCanAttach):
(WebKit::WebInspectorUIProxy::platformAttach):

Canonical link: https://commits.webkit.org/291202@main