Source/WebKit/UIProcess/Inspector/win/WebInspectorUIProxyWin.cpp
@@ -346,11 +346,30 @@ DebuggableInfoData WebInspectorUIProxy::infoForLocalDebuggable()
     return DebuggableInfoData::empty();
 }
 
+// Set a default sizes based on InspectorFrontendClientLocal.
+static constexpr unsigned s_defaultAttachedSize = 300;
+static constexpr unsigned s_minimumAttachedHeight = 250;
+static const float s_maximumAttachedHeightRatio = 0.75;
+static constexpr unsigned s_minimumAttachedWidth = 500;
+
+bool WebInspectorUIProxy::platformCanAttach(bool)
+{
+    RefPtr inspectedPage = m_inspectedPage.get();
+    if (!inspectedPage)
+        return false;
+    auto deviceScaleFactor = inspectedPage->intrinsicDeviceScaleFactor();
+    RECT inspectedWindowRect;
+    GetClientRect(m_inspectedViewWindow, &inspectedWindowRect);
+
+    unsigned inspectedWindowHeight = (inspectedWindowRect.bottom - inspectedWindowRect.top) / deviceScaleFactor;
+    unsigned inspectedPageWidth = (inspectedWindowRect.right - inspectedWindowRect.left) / deviceScaleFactor;
+    unsigned maximumAttachedHeight = inspectedWindowHeight * s_maximumAttachedHeightRatio;
+
+    return s_minimumAttachedHeight <= maximumAttachedHeight && s_minimumAttachedWidth <= inspectedPageWidth;
+}
+
 void WebInspectorUIProxy::platformAttach()
 {
-    static const unsigned defaultAttachedSize = 300;
-    static const unsigned minimumAttachedWidth = 750;
-    static const unsigned minimumAttachedHeight = 250;
     auto deviceScaleFactor = protectedInspectorPage()->deviceScaleFactor();
 
     if (m_inspectorDetachWindow && ::GetParent(m_inspectorViewWindow) == m_inspectorDetachWindow) {
@@ -365,12 +384,12 @@ void WebInspectorUIProxy::platformAttach()
 
     if (m_attachmentSide == AttachmentSide::Bottom) {
         unsigned inspectedWindowHeight = (inspectedWindowRect.bottom - inspectedWindowRect.top) / deviceScaleFactor;
-        unsigned maximumAttachedHeight = inspectedWindowHeight * 3 / 4;
-        platformSetAttachedWindowHeight(std::max(minimumAttachedHeight, std::min(defaultAttachedSize, maximumAttachedHeight)));
+        unsigned maximumAttachedHeight = inspectedWindowHeight * s_maximumAttachedHeightRatio;
+        platformSetAttachedWindowHeight(std::max(s_minimumAttachedHeight, std::min(s_defaultAttachedSize, maximumAttachedHeight)));
     } else {
         unsigned inspectedWindowWidth = (inspectedWindowRect.right - inspectedWindowRect.left) / deviceScaleFactor;
-        unsigned maximumAttachedWidth = inspectedWindowWidth * 3 / 4;
-        platformSetAttachedWindowWidth(std::max(minimumAttachedWidth, std::min(defaultAttachedSize, maximumAttachedWidth)));
+        unsigned maximumAttachedWidth = inspectedWindowWidth * s_maximumAttachedHeightRatio;
+        platformSetAttachedWindowWidth(std::max(s_minimumAttachedWidth, std::min(s_defaultAttachedSize, maximumAttachedWidth)));
     }
     ::ShowWindow(m_inspectorViewWindow, SW_SHOW);
 }
